--- a/content/pages/careers/index.adoc
+++ b/content/pages/careers/index.adoc
@@ -8,60 +8,59 @@
 = Careers
 
 Are you interested in becoming part of our team?
-If so, carefully read each section below and make sure you understand it.
+If so, please carefully read each section below
+and make sure you understand it.
 Do not skip any sections.
 
 [role="etapa_c"]
 == 1. Overview
 
-Who We Are, Who We Are Looking For, and How to Apply
+Who we are, who we are looking for, and how to apply
 
 This is the first step in the hiring process
 to become part of the `Fluid Attacks` team.
-This step provides you with a brief overview of our candidate selection process.
+This step provides you with a brief overview
+of our candidate selection process.
 Completion of each step is mandatory.
 This step requires an estimated 4 to 6 minutes to complete.
-To begin just follow the detailed [inner]#link:terms/[instructions]#.
+To begin, just follow the detailed link:terms/[instructions].
 
 == 2. Reasons
 
 `Fluid Attacks` is a great place to work and this section will tell you why.
 As with all other sections, this is a mandatory read,
 and requires an estimated time of 3 to 5 minutes to complete.
-To begin, you just have to click [inner]#link:reasons/[here]#.
+To begin, please click link:reasons/[here].
 
 == 3. Openings
 
 The goal of this stage
 is for you to understand the roles you can have in `Fluid Attacks`,
-or in openings presented by AUTONOMIC,
-a `Fluid Attacks` Spin Off in charge of the recruitment process.
+or in openings handled by Autonomic Mind,
+a `Fluid Attacks` spin-off in charge of the recruitment process.
 This is mandatory and requires an estimated effort of 3 to 5 minutes.
-To begin,
-you just have to click [inner]#link:openings/[here]#
+To begin, please click link:openings/[here].
 
 == 4. Portfolio
 
 The goal of this stage
-Is to assess your ability to express yourself,
+is to assess your ability to express yourself,
 synthesize ideas and capture our attention
 through the elaboration of a portfolio.
 This is mandatory and requires an estimated effort of 1 to 2 hours.
-To begin,
-You just have to follow these detailed [inner]#link:portfolio/[instructions]#
+To begin, please follow these detailed link:portfolio/[instructions].
 
 [role="etapa_a"]
 == 5. Apply
 
 The goal of this stage
 is that you send us your CV and your expectations.
-This is mandatory and requires an estimated effort of 5 to 10 minutes
+This is mandatory and requires an estimated effort of 5 to 10 minutes,
 depending on your profile.
-To do this you must first complete the previous stage.
+Before doing this, you must first complete the previous stage.
 
 [role="a_formLink"]
-To begin,
-you just have to follow these detailed [inner]#link:https://fluidattacks.com/forms/aplicacion[instructions]#
+To begin, please follow these detailed link:https://fluidattacks.com/forms/aplicacion[instructions].
 
 [role="etapa_h"]
 == 6. History
@@ -70,29 +69,26 @@ The goal of this stage
 is to register your previous work experience.
 This is optional *If you have no previous experience* and
 requires an estimated effort of 3 to 5 minutes per job prior to this one.
-To do this you must first complete the previous stage.
+Before doing this, you must first complete the previous stage.
 
 [role="h_formLink"]
-To begin,
-you just have to follow these detailed link:https://forms.zohopublic.com/autonomic/form/EmailSubscription/formperma/uULwpjYyJE6S0EbBNkk1u4iqvdw1NeIMxr1KPZHjo3w?fbclid=IwAR06jKXDkeP96mTECFubNKduoCUHhPNJVfVf4yU3clK3X4qhV-uZT22T6Q8[instructions].
+To begin, please follow these detailed link:https://forms.zohopublic.com/autonomic/form/EmailSubscription/formperma/uULwpjYyJE6S0EbBNkk1u4iqvdw1NeIMxr1KPZHjo3w?fbclid=IwAR06jKXDkeP96mTECFubNKduoCUHhPNJVfVf4yU3clK3X4qhV-uZT22T6Q8[instructions].
 
 == 7. Evaluations
 
 . *Knowledge:* The goal of this stage
 is to assess your skills and abilities in different areas.
-This is mandatory and requires an estimated effort of 2 to 3 hours
+This is mandatory and requires an estimated effort of 2 to 3 hours,
 depending on your knowledge,
 with an average time of `1` minute to answer each question.
-To do this you must first complete the previous stage.
-To begin,
-You just have to follow these detailed [inner]#link:knowledge-test/[instructions]#.
+Before doing this, you must first complete the previous stage.
+To begin, please follow these detailed link:knowledge-test/[instructions].
 
 . *Strengths:* The goal of this stage
-Is to assess your strengths through the Clifton Strengths Finder test.
+is to assess your strengths through the Clifton Strengths Finder test.
 This is mandatory and requires an estimated effort of 40 to 45 minutes.
-To do this you must first finish the previous stage.
-To begin,
-you must write us an email at careers@fluidattacks.com
+Before doing this, you must first complete the previous stage.
+To begin, please write us an email at careers@fluidattacks.com.
 
 == 8. Challenges
 
@@ -100,105 +96,94 @@ you must write us an email at careers@fluidattacks.com
 is to assess your learning potential,
 investigate and solve different types of problems that we face on a daily basis.
 Our current talents are in the link:https://www.wechall.net/country_ranking/for/31/Colombia[TOP10 for Colombia],
-and in fact,
-some of them are in the link:https://www.wechall.net/ranking[TOP100 Worldwide].
+and in fact, some of them are in the link:https://www.wechall.net/ranking[TOP100 Worldwide].
 This is mandatory for technical roles and
-requires an estimated effort of 4 to 16 hours
+requires an estimated effort of 4 to 16 hours,
 according to your skills and knowledge.
-To do this you must first finish the previous stage.
-To begin,
-you just have to follow these detailed
-[inner]#link:https://gitlab.com/autonomicmind/challenges/-/wikis/technical-challenges[instructions]#
+Before doing this, you must first complete the previous stage.
+To begin, please follow these detailed link:https://gitlab.com/autonomicmind/challenges/-/wikis/technical-challenges[instructions].
 
 . *Non-Technical Challenges*: The goal of this stage
 is to assess your ability to solve challenges
 that apply to analytical and statistical profiles.
 This is mandatory for non-technical profiles and
-Requires an estimated effort of 4 to 16 hours
+requires an estimated effort of 4 to 16 hours,
 according to your skills and knowledge.
-To do this you must first finish the previous stage.
-To begin,
-you just have to follow these detailed [inner]#link:non-technical-challenges/[instructions]#
+Before doing this, you must first complete the previous stage.
+To begin, please follow these detailed link:non-technical-challenges/[instructions].
 
 == 9. Interview
 
 . *Video Interview:* The goal of this stage
 is to show your interest and desire to be a part of `Fluid Attacks`
 through a video interview.
-Requires an estimated effort of 25 to 30 minutes.
-To do this you must first finish the previous stage.
-To begin,
-write us an email at careers@fluidattacks.com
-. *On-site Interview:* The goal of this stage
+It requires an estimated effort of 25 to 30 minutes.
+Before doing this, you must first complete the previous stage.
+To begin, please write us an email at careers@fluidattacks.com.
+. *On-Site Interview:* The goal of this stage
 is to set up a meeting where we can get to know you personally.
-Requires an estimated effort of 25 to 30 minutes.
-To do this you must first finish the previous stage.
-To begin,
-write us an email at careers@fluidattacks.com
+It requires an estimated effort of 25 to 30 minutes.
+Before doing this, you must first complete the previous stage.
+To begin, please write us an email at careers@fluidattacks.com.
 
 == 10. Immersion
 
 The goal of this stage
-is to take part of an intensive self-training period
+is to take part in an intensive self-training period
 in programming and hacking challenges,
 paid for by `Fluid Attacks`.
 This is mandatory and requires an effort
 that is determined based on your knowledge.
-To begin, write us an email at careers@fluidattacks.com
-and read these detailed
-[inner]#link:https://gitlab.com/autonomicmind/challenges/-/wikis/immersion[instructions]#
+To begin, please write us an email at careers@fluidattacks.com
+and read these detailed link:https://gitlab.com/autonomicmind/challenges/-/wikis/immersion[instructions].
 
 == 11. References
 
 The goal of this stage
 is to validate the references from your previous jobs.
 This is mandatory and requires an estimated effort of 15 minutes per call.
-To do this you must first finish the previous stage.
-To begin,
-you just have to follow these detailed [inner]#link:reverse-references/[instructions]#
+Before doing this, you must first complete the previous stage.
+To begin, please follow these detailed link:reverse-references/[instructions].
 
 == 12. Polygraph
 
-The goal of this stage
-is to take a polygraph test.
-Our company is focused on information security,
-for this reason, we may require you to take this kind of test
+Our company is focused on information security
+and for this reason we may require you to take a polygraph test
 during the selection process.
 This step is optional and requires an average effort of `2` hours.
-To start, you must have finished the previous stage,
-write us an email at careers@fluidattacks.com
+Before doing this, you must complete the previous stage.
+To begin, please write us an email at careers@fluidattacks.com
 and we will provide further information about the test.
 
 == 13. Audition
 
 The goal of this stage
-Is for you to show your ability to express yourself
-By presenting a topic of our choice
-To an audience of minimum 3 and maximum 30 people.
+is for you to show your ability to express yourself
+by presenting a topic of our choice
+to an audience of minimum 3 and maximum 30 people.
 This is optional and requires an estimated effort of 4 hours
-to prepare a 20 minute presentation.
-To do this you do not need to finish the previous stage.
-To begin,
-write us an email at careers@fluidattacks.com
+to prepare, plus a 20-minute presentation.
+Before doing this, you do not need to complete the previous stage.
+To begin, please write us an email at careers@fluidattacks.com.
 
 == 14. Offer
 
-If you reach this stage in the process
+If you reach this stage in the process,
 we will send you a job offer via email
 detailing the terms and conditions of the offer we have for you.
-If you have doubts
+If you have any doubts,
 you must state them in the same email thread.
 
 == 15. Hiring
 
-Once we come to an agreement with the offer,
-we will email you asking for a list of documents
+Once we come to an agreement regarding the offer,
+we will email you with a list of documents
 you must provide to complete this stage.
 
-At the end, we will notify you with the results.
-Although it is a long process, it can be done in a short amount of time.
+Finally, we will notify you with the results.
+Although it is a long process, it can be completed in a short amount of time.
 In some cases, it can take less than 2 weeks.
 
 == Frequently Asked Questions
 
-* *Doubts?*, you can read our FAQ [inner]#link:faq/[here]#
+* *Questions?* Please see our FAQ link:faq/[here].
