refac(front): #3578 certifications new design
- Use template for Partners to generate the cards in the new
Certifications page
- Rename template to cardsgen


Former-commit-id: 5f2397b4723072952f547a478d9ae02dde710241

--- a/content/pages/about-us/certifications/index.adoc
+++ b/content/pages/about-us/certifications/index.adoc
@@ -3,117 +3,7 @@
 :description: Our team of ethical hackers and pentesters counts with high certifications related to cybersecurity information.
 :keywords: Fluid Attacks, Ethical Hackers, Team, Certifications, Cybersecurity, Pentesters, Whitehat Hackers
 :banner: certifications-bg
+:template: about-us/cardsgen
+:certificationsindex: yes
 
 = Certifications
-
-[role="aliados tb-alt"]
-[cols=2, frame="none"]
-|====
-
-a|image::logo-osce.png[logo osce]
-
-a|== Offensive Security Certified Expert (OSCE)
-
-`OSCE` is a certification focused on advanced penetration testing skills,
-created by `Offensive Security`.
-In an intense 48-hour exam,
-the professionals prove they can develop exploits,
-execute attacks, and obtain administrative access.
-`OSCEs` can think outside the box
-and perform with persistence, even under pressure.
-
-a|== Offensive Security Certified Professional (OSCP)
-
-`OSCP` is a professional certification in ethical hacking
-developed by `Offensive Security`.
-It is the world's first completely hands-on
-offensive information security certification.
-It requires the professionals to prove
-that they have a clear understanding
-of the penetration testing process and life cycle
-through an arduous 24-hour exam.
-
-a|image::logo-oscp.png[logo oscp]
-
-a|image::logo-oswp.png[logo oswp]
-
-a|== Offensive Security Wireless Professional (OSWP)
-
-`OSWP` is the only professional certification
-in practical wireless attacks in the security field today.
-In a hands-on exam, an `OSWP` must prove they have the skills
-to do 802.11 wireless audits using open source tools.
-
-a|== Certified Red Teaming Expert (CRTE)
-
-The Certified (Windows) Red Teaming Expert
-is an entirely hands-on certification awarded by the Pentester Academy.
-This certification guarantees a person with the expertise
-to assess the security of an unknown Windows infrastructure
-and recognize misconfigurations and abuses.
-
-a|image::logo-crte.png[logo crte]
-
-a|image::logo-ceh.png[logo ceh]
-
-a|== Certified Ethical Hacker (CEH)
-
-`CEH` is a professional certification
-by the International Electronic Commerce Council (`EC-Council`).
-This council certifies professionals
-in the security discipline of ethical hacking.
-It is unaffiliated with any commercial entity
-and is considered independent and impartial.
-
-a|== Certified Information Systems Security Professional (CISSP)
-
-`CISSP` is a professional advanced certification awarded by the
-International Information Systems Security Certification Consortium (`ISC`).
-It helps companies acknowledge professionals
-who obtain information security expertise.
-`CISSP` is required for the `ISSEP` program
-of the `US` National Security Agency (`NSA`).
-
-a|image::logo-cissp.png[logo cissp]
-
-a|image::logo-cism.png[logo cism]
-
-a|== Certified Information Security Manager (CISM)
-
-`CISM` is a certification focused on management,
-promoting global security standard practices.
-`CISM` accredits management professionals who lead, design, and assess
-the security of the information of a company.
-
-a|== Certified Information Systems Auditor (CISA)
-
-Internationally recognized certification for
-Information Systems audit control, assurance, and security professionals.
-`CISA` recognizes a professional's skills and experience
-to assess vulnerabilities, report on compliance,
-and enhance existing or establish new controls in a business.
-
-a|image::logo-cisa.png[logo cisa]
-
-a|image::logo-comptia.png[logo comptia]
-
-a|== CompTIA Security+
-
-This is an internationally recognized certification
-by the Computing Technology Industry Association, a non-profit trade union.
-It certifies a professional has the core knowledge and skills necessary
-for practical security problem-solving.
-Typically, the point of origin for a career in `IT` security.
-
-a|== GIAC Information Security Professional (GISP)
-
-`GISP` is a certification for security professionals
-who want to expand their knowledge.
-It requires them to go beyond simple terminology and ideas
-to include practical applications.
-It is designed to provide skills
-to professionals in `IT` systems' hands-on roles involving security tasks.
-
-a|image::logo-gisp.png[logo gisp]
-
-|====
