--- a/content/pages/about-us/partners/index.adoc
+++ b/content/pages/about-us/partners/index.adoc
@@ -3,7 +3,8 @@
 :description: Our partners allow us to complete our portfolio and offer better security testing services. Get to know them and become one of them.
 :keywords: Fluid Attacks, Partners, Services, Security Testing, Software Development, Pentesting, Ethical Hacking
 :banner: partners-bg
-:template: about-us/partners
+:template: about-us/cardsgen
+:partnersindex: yes
 
 = Partners
 
