feat(doc): #3596.16 add pci refs to some rules
- Added PCI DSS references to R075 and R046
- Updated R075 and R046 keywords


Former-commit-id: 5d08bf6615ec135f8e28db255b006b7cf1b486f1

--- a/content/pages/rules/files/046/index.adoc
+++ b/content/pages/rules/files/046/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/046/
 :category: files
 :description: This requirement establishes that the system must manage through logs the integrity of critical files.
-:keywords: System, Log, File, Integrity, Security, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: System, Log, File, Integrity, Security, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R046. Manage integrity of critical files
@@ -22,3 +22,11 @@ the event when logging it.
 V14.1 Build.(14.1.5)]
 Verify that authorized administrators can verify the integrity of all
 security-relevant configurations to detect tampering.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.2.2]
+Implement automated audit trails for all system components to reconstruct all
+actions taken by any individual with root or administrative privileges.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.2.6]
+Implement automated audit trails for all system components to reconstruct
+creation and deletion of system-level objects.
