--- a/content/pages/careers/hiring/index.adoc
+++ b/content/pages/careers/hiring/index.adoc
@@ -1,18 +1,18 @@
 :slug: careers/hiring/
 :category: careers
-:description: The main goal of the following page is to inform potential talents and people interested in working with us about our selection process. In this stage we present the required documentation to formally legalize your selection once you have successfully finished all the previous stages.
+:description: In this page we present the required documentation to formally legalize your selection once you have successfully finished all the previous stages.
 :keywords: Fluid Attacks, Careers, Legalization, Selection, Process, Requirements.
 
-= Hiring
+= Hiring Documents
 
 When you accept `Fluid Attacks'` job offer,
-you must send us a *single email* at administration@fluidattacks.com
+you must send us an *email* at administration@fluidattacks.com
 with a *single carefully organized* `.ZIP` file
 containing a `PDF` for each of the following documents:
 
 . Digital photo, in color, on a white background, with suit and tie (men).
-. Photocopy of a valid government-issued ID-both sides on one page.
-. Photocopy of your business or professional card-both sides on one page
+. Photocopy of a valid government-issued ID - both sides on one page.
+. Photocopy of your business or professional card - both sides on one page
 (if you have a degree).
 . Photocopy of your highest-level university diploma
 (Bachelor's, Master's or PhD).
@@ -24,10 +24,10 @@ It must contain:
 .. Your major(s) and minor(s).
 .. Total number of credits required to graduate or complete your degree.
 .. Number of credits completed, with grades,
-as of the date you are applying to `Fluid Attacks`.
+as per the date you are applying to `Fluid Attacks`.
 .. Course names and number of credits you are currently enrolled in.
 .. Cumulative grade point average
-as of the date you are applying to `Fluid Attacks`.
+as per the date you are applying to `Fluid Attacks`.
 
 . Photocopy of relevant professional certifications.
 . Photocopy of relevant courses taken.
@@ -44,10 +44,10 @@ who are or will be covered by your healthcare insurance.
 or a certificate of affiliation if you already have one.
 . Evidence of attendance to the pre-employment medical exam.
 . Bank account information for purposes of direct deposit for your paycheck.
-In the `U.S.A.` your routing number and account number.
+For US accounts, your routing number and account number.
 . Marital status, indicating if you have children.
-. Complete contact information: home mailing address, email address, and phone
-numbers we can contact you at.
+. Complete contact information: home mailing address,
+email address, and phone numbers.
 
 If you have any questions,
 please don’t hesitate to contact us at administration@fluidattacks.com.
