--- a/content/pages/careers/reasons/index.adoc
+++ b/content/pages/careers/reasons/index.adoc
@@ -3,14 +3,13 @@
 :description: Here are some reasons why Fluid Attacks is a great place to work.
 :keywords: Fluid Attacks, Careers, Reasons, Work, Projects, Clients, Candidates, Jobs, Pentester, Ethical Hacker
 
-= Reasons to work with us
+= Reasons to Work With Us
 
-`Fluid Attacks` is a great place to work.
-This is due to:
+Here are *8* reasons why `Fluid Attacks` is a great place to work:
 
 == Hackers that develop their own tools
 
-When we have projects we hack applications or corporate networks.
+When we have projects, we hack applications or corporate networks.
 When we do not have projects,
 we develop our own software tools.
 This is why we are looking for hackers that are passionate about programming.
@@ -29,16 +28,16 @@ Do you want to take part in the most challenging selection process there is?
 A selection process where no matter the result,
 you will learn more than with any other company?
 If so, then we invite you to participate
-and see for yourself that with `Fluid Attacks`,
-it is better to do, then to know.
+and see for yourself that with `Fluid Attacks`
+it is better to do then to know.
 Our selection process is guided using `Git`,
 provides feedback through continuous integration
-and allows you to improve your world-ranking in programming and hacking,
+and allows you to improve your world ranking in programming and hacking,
 as well as your `GitLab` profile.
 You don’t need to have graduated,
-don’t need to be enrolled in a college or university,
+nor be enrolled in a college or university,
 nor have any specific work experience.
-The only thing that matters, is that you show us you can learn,
+The only thing that matters is that you show us you can learn,
 on your own, at an expected rate.
 
 == Short projects and high rotations
@@ -53,21 +52,21 @@ and to broaden your knowledge.
 
 `Fluid Attacks` was the first company in Colombia
 to obtain an `ISO/IEC 27001` (Information Security) certification
-at the same time we obtained the `ISO 9001` certificate.
+at the same time as we obtained the `ISO 9001` certificate.
 Also, our continuous improvement process
 uses the `ISO/IEC 17025` and Common Criteria standards
 as a reference for all security tests.
 
-== Work with the great ones
+== Work with industry leaders
 
 `Fluid Attacks` provides information security services
 to some of the biggest organizations in Colombia.
 This means that there will always be challenging projects
 in which you can participate.
-Bancolombia, Colpatria, Davivienda,
--- the biggest banks in the country;
-`UNE`, `ETB`, `EDATEL`, Claro,
--- the biggest ISP in the country; and many more.
+Our clients include: Bancolombia, Colpatria, Davivienda,
+(the biggest banks in the country),
+`UNE`, `ETB`, `EDATEL`, Claro
+(the biggest ISPs in the country) and many more.
 
 == Great talent working together
 
@@ -100,12 +99,9 @@ link:../../about-us/certifications/#information-technology-infrastructure-librar
 `Fluid Attacks` also believes that companies,
 no matter their size or sector,
 must contribute to  society's welfare.
-This is why `Fluid Attacks` participates, as a company,
-and actively encourages our employees to support education
-through the organization _“Dividendo por Colombia”_.
-At `Fluid Attacks` we also recycle and separate our waste
-into glass, paper, plastic, and ordinary
-for the benefit of the community.
+This is why we, as a company,
+support education through the organization “Dividendo por Colombia”
+and actively encourage our employees to participate in this initiative.
 
 == Former employees
 
@@ -116,8 +112,8 @@ Here is a short list:
 
   .  Rafael: Masters in Math from the Royal Institute of Technology in Sweden,
 currently `PhD` in Math at the University of Miami.
-  . Miguel: Masters in Computer Science from the Max-Plank Institute in Germany,
-  currently PhD at the same institute.
+  . Miguel: Masters in Computer Science from the Max Planck Institute
+  in Germany, currently PhD at the same institute.
   . Diego: Masters in Information Security, Australia.
   . Juan: Masters in Innovation, Switzerland.
   . Manuel: Masters in Innovation, England.
@@ -132,16 +128,15 @@ currently `PhD` in Math at the University of Miami.
 To us, it is very important to maintain close relationships in academia.
 This is why some of our employees teach
 or have taught courses and lectures
-at different universities in Medellin.
+at different universities in Medellin,
+covering topics such as:
 
-Courses in topics such as:
-
-* Information Security.
-* Secure Development Life Cycle.
-* Programming.
-* Networks.
-* Operating Systems.
-* Distributed Systems.
+* Information Security
+* Secure Development Life Cycle
+* Programming
+* Networks
+* Operating Systems
+* Distributed Systems
 
 In addition,
 we are part of the Business Lecture group at `EAFIT` University,
@@ -149,8 +144,8 @@ University of Medellin,
 La Salle University Corporation,
 and the University of Antioquia.
 
-In this program our employees teach short courses on specific topics,
-free of charge, for students at a variety of universities.
+In this program, our employees teach short courses on specific topics,
+free of charge, for students at the associated universities.
 So far, we have offered courses in Basics of `Linux`,
 Information Security Principles,
 and Hacking through Wargames.
