--- a/content/pages/careers/non-technical-challenges/index.adoc
+++ b/content/pages/careers/non-technical-challenges/index.adoc
@@ -6,63 +6,61 @@
 
 = Non-technical Challenges
 
-Below is the detail of the Data Analysis stage of the selection process
+Below are the details of the Data Analysis stage of the selection process
 to become a part of `Fluid Attacks`.
 
 The goal of this stage is to determine your ability to:
 
-* Discard irrelevant data,
-* Identify relevant data,
-* Complete incomplete data,
-* Interpret the meaning of the data,
-* Group data,
-* Obtain metrics from raw data,
-* Create graphs to present data,
-* Draw conclusions based on the data,
-* Identify *concrete* actions based on the conclusions,
-* Ask new questions based on this process,
-* Iterate this process several times until you determine that you are satisfied.
+* Discard irrelevant data
+* Identify relevant data
+* Complete incomplete data
+* Interpret the meaning of the data
+* Group data
+* Obtain metrics from raw data
+* Create graphs to present data
+* Draw conclusions based on the data
+* Identify *concrete* actions based on the conclusions
+* Ask new questions based on this process
+* Iterate this process several times until you determine that you are satisfied
 
 To determine these skills
 you will be given the findings or vulnerabilities
 found by `Fluid Attacks` in recent months.
-These will be delivered on a spreadsheet
+These will be delivered in a spreadsheet
 with all confidential data redacted from it.
-It is possible that the sheet contains incomplete, irrelevant and
-inconsistent data,
-proceed as you see fit in order to meet the objective.
+It is possible that the sheet may contain incomplete,
+irrelevant and inconsistent data,
+however please proceed as you see fit in order to meet the objective.
 
 You must take this spreadsheet and
-build a presentation (not a document)
-with transparencies -slides- (not pages) and
-deliver it in a PDF format (not PPTX).
-The presentation must contain a brief introduction (no more than 2 slides) and
-one graph per transparency,
-analyzing them in the dimensions and
-combinations that you consider relevant
-so that an executive from an information security company
+build a presentation (not a document) with slides (not pages)
+and deliver it in a PDF format (not PPTX).
+The presentation must contain a brief introduction (no more than 2 slides)
+and one graph per slide,
+analyzing the data in the dimensions and
+combinations that you consider relevant.
+The aim is that an executive from an information security company
 such as `Fluid Attacks` can make strategic decisions that
 improve the implementation of the company's mission in our society:
 "Find all existing vulnerabilities and report them as soon as possible".
 
-The spreadsheet can be found in this
-[inner]#link:hallazgos-open-data.tar.bz2[file]#
+The spreadsheet can be found in this link:hallazgos-open-data.tar.bz2[file].
 
-One conclusion must be drawn from each graph and
-a correspoding *concrete* managerial action,
-that you believe `Fluid Attacks` should implement, suggested.
-At the end of the presentation, conclusions and
-general recommendations
-derived from those of each graph are expected,
-but different (don’t repeat, do group, do abstract).
-The number of transparencies and graphs is unlimited,
-you can choose to make 10 transparencies with 10 graphs or
-100 transparencies with 100 graphs.
+For each graph, you must draw one conclusion
+and suggest a correspoding *concrete* managerial action,
+that you believe `Fluid Attacks` should implement.
+At the end of the presentation,
+conclusions and general recommendations are expected,
+but please make sure these are different
+from those already mentioned on the previous slides
+(don’t repeat, do group, do summarize).
+The number of slides and graphs is unlimited,
+you can choose to have 10 slides with 10 graphs or
+100 slides with 100 graphs.
 What matters is that each graph is relevant and
 provides important information for management.
-If possible and
-to minimize the number of graphs and
-maximize the number of variables, use:
+If possible, and to minimize the number of graphs
+and maximize the number of variables, please use:
 
 * Stacked bars,
 * Data in the X and Y axis,
@@ -70,8 +68,8 @@ maximize the number of variables, use:
 * Pareto charts,
 * An "others" category to ignore all irrelevant categories.
 
-Many of the graphs can be done for the entire period
-In order to draw global conclusions.
+Many of the graphs can be made for the entire period
+in order to draw global conclusions.
 One possibility is to make metrics or
 graphs that show the evolution of certain variables over time.
 These graphs are of great interest and
@@ -84,7 +82,7 @@ This type of graph can give a lot of relevant information.
 
 You may ask all questions you consider necessary
 by sending us an email at careers@fluidattacks.com.
-All questions whose answer in already in the material we provided
+All questions which are already answered in the material we provided
 will be quietly ignored.
 Questions regarding ideas or
 expected solutions will also be ignored.
@@ -94,27 +92,26 @@ to all other participants.
 
 This document must be delivered via email (careers@fluidattacks.com)
 in no more than 7 calendar days after completing the previous stage.
-You may ask for deadline extension
-If you send your progress and partial results and
-Request for it with 2 days before the deadline.
+You may ask for a deadline extension
+if you send your progress and partial results
+and request it within 2 days of the deadline.
 Failure to meet this deadline
-will result in the termination of the process.
+will result in the termination of the application process.
 
 The data that is given to you is confidential and,
-therefore, both the report you create and
-the information shared must only be analyzed and
-processed by you.
-In the same manner
-it is expected that the report be made only by you and
-is 100% of your authorship.
+therefore, both the report you create and the information shared
+must only be analyzed and processed by you.
+In the same manner,
+it is expected that the report be made only by you
+and is 100% of your authorship.
 If you feel that you need help from other people to perform this task,
 this is a clue that the current needs of `Fluid Attacks`
 do not fit your current profile.
 This type of activities are the basis of the project and
 team management philosophy in `Fluid Attacks`
 (management based on data and metrics),
-therefore, this activity is no more than a simulation of
-what will be your everyday tasks.
+effectively making this activity no more than a simulation
+of what your everyday tasks would be.
 
 If you stated in your application that
 you are a fluent English speaker by checking the "Yes" box,
@@ -126,23 +123,22 @@ to control the leakage of information,
 we have changed some data
 specific to each candidate
 in order to identify the origin of a data leak
-In case there exist one.
+in case there is one.
 
 We kindly ask that if you consider
 you are no longer interested in continuing with the selection process,
-please explicitly notify us of your decision via email,
+you please explicitly notify us of your decision via email,
 so that we can minimize the time spent managing candidates.
 
-The reports handed in by all the candidates
+The reports submitted by all the candidates
 will be compared with the master report that
 is carried out internally by the company,
 as well as with other participants.
 
-The participant will receive more points for this stage
-as they require fewer days for its completion and
-conclude the best actions and
-recommendations for the company,
-as well as integrate in visible and
-understandable graphs the greatest number of variables.
+Higher points will be rewarded to those participants
+who require fewer days for its completion
+and conclude the best actions and recommendations for the company,
+as well as integrating the greatest number of variables
+in easily understandable graphs.
 
-We will be expecting an email with your report.
+We look forward to receiving an email with your report.
