--- a/content/pages/careers/reverse-references/index.adoc
+++ b/content/pages/careers/reverse-references/index.adoc
@@ -9,23 +9,22 @@ In this stage of the process,
 we validate the references
 from your previous employer.
 Two of your direct bosses (your boss's superior and your family do not apply)
-from the previous jobs you listed in our application
-must call at the number given below.
-
-This is all about doing everything needed
-to get two of your bosses to give us a call
-in order to have a short conversation with them
-regarding your performance
-so that we can get an idea of
-how you worked in said companies.
+from the previous jobs you listed in your application
+must call the number provided below.
 
 * Cellphone: *+57 320 788 1879*
 
+This is all about doing everything needed
+in order to get two of your former bosses to give us a call
+in order to have a short conversation with them regarding your performance
+so that we can get an idea of how you worked in their respective companies.
+
 Please send us an email
 confirming the names and contact information
-of the two bosses that are going to call us.
+of the two bosses who are going to call us.
 
-Don't hesitate to contact us
-if you have any doubts regarding the process.
+Please don't hesitate to contact us
+if you have any doubts regarding this step of the application process.
 
-The person that will contact you is Juan Restrepo.
+The person who will be answering the calls
+under the number provided is Juan Restrepo.
