feat(doc): #3596.18 create rule 363
- Created R363 for clock synchronization
- Added a Description
- Added PCI DSS references to R046 and R363
- Adjusted R183 to set it apart from R360


Former-commit-id: 5aea080ff2631dab7028bf34c606949be5da688e

--- a/content/pages/rules/data/183/index.adoc
+++ b/content/pages/rules/data/183/index.adoc
@@ -8,9 +8,8 @@
 
 == Requirement
 
-The system must support the secure removal of sensitive data
-when they are no longer required,
-so that they can not be recovered.
+The system must support the secure removal of sensitive data,
+guaranteeing that it cannot be recovered.
 
 == Description
 
