--- a/content/pages/rules/authorization/096/index.adoc
+++ b/content/pages/rules/authorization/096/index.adoc
@@ -121,3 +121,6 @@ Assign access based on individual personnel’s job classification and function.
 . [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.2.2]
 This access control system(s) must include assignment of privileges to
 individuals based on job classification and function.
+
+. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.5.1]
+Limit viewing of audit trails to those with a job-related need.
