--- a/content/pages/rules/out-of-scope/assets/005/index.adoc
+++ b/content/pages/rules/out-of-scope/assets/005/index.adoc
@@ -88,7 +88,7 @@ image::../out-of-scope/assets/005/diag1-req003.png[Req003 Diagram]
 
 An anonymous person or employee executes actions
 that attempt against the security
-of any of the organization’s information assets.
+of any of the organization's information assets.
 Given the previous scenario
 it is not possible to determine the value of the controls
 that must be implemented
