--- a/content/pages/rules/architecture/320/index.adoc
+++ b/content/pages/rules/architecture/320/index.adoc
@@ -65,15 +65,15 @@ purposes.
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r7]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
-data, such as access other users’ accounts, view sensitive files,
-modify other users’ data, change access rights, etc.
+data, such as access other users' accounts, view sensitive files,
+modify other users' data, change access rights, etc.
 
 . [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.1)]
