--- a/content/pages/rules/authentication/153/index.adoc
+++ b/content/pages/rules/authentication/153/index.adoc
@@ -40,7 +40,7 @@ while they are in transit from the client to the server.
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
