--- a/content/pages/rules/authentication/226/index.adoc
+++ b/content/pages/rules/authentication/226/index.adoc
@@ -32,7 +32,7 @@ accounts to be locked out.
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
