--- a/content/pages/rules/authentication/328/index.adoc
+++ b/content/pages/rules/authentication/328/index.adoc
@@ -54,15 +54,15 @@ functionality.
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r7]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
-data, such as access other users’ accounts, view sensitive files,
-modify other users’ data, change access rights, etc.
+data, such as access other users' accounts, view sensitive files,
+modify other users' data, change access rights, etc.
 
 . [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.4)]
@@ -112,4 +112,4 @@ CDE (Cardholder Data Environment) for personnel with administrative access.
 Incorporate multi-factor authentication for all remote network access
 (both user and administrator, and including third-party access for support or
 maintenance)
-originating from outside the entity’s network.
+originating from outside the entity's network.
