--- a/content/pages/rules/authentication/335/index.adoc
+++ b/content/pages/rules/authentication/335/index.adoc
@@ -49,7 +49,7 @@ validity period.
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
