--- a/content/pages/rules/authorization/096/index.adoc
+++ b/content/pages/rules/authorization/096/index.adoc
@@ -83,8 +83,8 @@ when privileged role assignments are no longer appropriate.
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
-data, such as access other users’ accounts, view sensitive files,
-modify other users’ data, change access rights, etc.
+data, such as access other users' accounts, view sensitive files,
+modify other users' data, change access rights, etc.
 
 . [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.1)]
@@ -116,7 +116,7 @@ including level of privilege required (for example, user, administrator, etc.)
 for accessing resources.
 
 . [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.3]
-Assign access based on individual personnel’s job classification and function.
+Assign access based on individual personnel's job classification and function.
 
 . [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.2.2]
 This access control system(s) must include assignment of privileges to
@@ -124,3 +124,7 @@ individuals based on job classification and function.
 
 . [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 10.5.1]
 Limit viewing of audit trails to those with a job-related need.
+
+. [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Appendix A1 A1.1]
+Ensure that each entity only runs processes that have access to that entity's
+cardholder data environment.
