--- a/content/pages/rules/files/340/index.adoc
+++ b/content/pages/rules/files/340/index.adoc
@@ -39,7 +39,7 @@ with.
 Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
 occur when untrusted data is sent to an interpreter as part of a command or
 query.
-The attacker’s hostile data can trick the interpreter into executing unintended
+The attacker's hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
 . [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A7-Cross-Site_Scripting_(XSS)[OWASP Top 10 A7:2017-Cross-Site Scripting (XSS)].
@@ -47,7 +47,7 @@ commands or accessing data without proper authorization.
 page without proper validation or escaping,
 or updates an existing web page with user-supplied data using a browser *API*
 that can create *HTML* or **JavaScript**.
-*XSS* allows attackers to execute scripts in the victim’s browser which can
+*XSS* allows attackers to execute scripts in the victim's browser which can
 hijack user sessions, deface web sites, or redirect the user to malicious
 sites.
 
