--- a/content/pages/rules/out-of-scope/assets/006/index.adoc
+++ b/content/pages/rules/out-of-scope/assets/006/index.adoc
@@ -14,12 +14,12 @@ Threats to information assets must be identified and documented
 == Description
 
 The organization must model a representative structure
-that includes all the information that impacts the assets’
+that includes all the information that impacts the assets'
 integrity, availability and confidentiality.
 Once the information is collected, organized and processed,
 the organization will be empowered
 to make informed decisions
-about the assets’ security risks.
+about the assets' security risks.
 
 == Implementation
 
@@ -48,7 +48,7 @@ for each of the previously identified assets.
 The organization can identify threats
 by first evaluating the historical record of incidents
 and deciding which were the external causes
-that were established and put the asset’s integrity at risk.
+that were established and put the asset's integrity at risk.
 After identifying the causes,
 it is highly recommended to document them in a threat catalog.
 
@@ -73,7 +73,7 @@ image::../out-of-scope/assets/006/diag1.png[Diagram 1]
 
 An anonymous person or employee executes actions
 that attempt against the security
-of any of the organization’s information assets.
+of any of the organization's information assets.
 Due to this situation
 the controls that were put in place for their protection
 are not effective since the current threat
