--- a/content/pages/rules/session/023/index.adoc
+++ b/content/pages/rules/session/023/index.adoc
@@ -88,7 +88,7 @@ or description of when to log out].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
