--- a/content/pages/rules/session/029/index.adoc
+++ b/content/pages/rules/session/029/index.adoc
@@ -145,7 +145,7 @@ Cookies SHOULD be tagged to be inaccessible via JavaScript (HttpOnly).
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r9]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
@@ -162,7 +162,7 @@ exchanged with the browser.
 page without proper validation or escaping,
 or updates an existing web page with user-supplied data using a browser *API*
 that can create *HTML* or **JavaScript**.
-*XSS* allows attackers to execute scripts in the victim’s browser which can
+*XSS* allows attackers to execute scripts in the victim's browser which can
 hijack user sessions, deface web sites, or redirect the user to malicious
 sites.
 
