--- a/content/pages/rules/session/357/index.adoc
+++ b/content/pages/rules/session/357/index.adoc
@@ -31,7 +31,7 @@ outbound communication to external components, or encryption of internal data.
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
-or to exploit other implementation flaws to assume other users’ identities
+or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
