--- a/content/pages/rules/source/169/index.adoc
+++ b/content/pages/rules/source/169/index.adoc
@@ -29,7 +29,7 @@ could modify the intended SQL command.
 Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
 occur when untrusted data is sent to an interpreter as part of a command or
 query.
-The attacker’s hostile data can trick the interpreter into executing unintended
+The attacker's hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
