--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -204,7 +204,7 @@ modify the intended logic of the query.
 Injection flaws, such as **SQL**, **NoSQL**, **OS**, and *LDAP* injection,
 occur when untrusted data is sent to an interpreter as part of a command or
 query.
-The attacker’s hostile data can trick the interpreter into executing unintended
+The attacker's hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
 . [[r16]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A4-XML_External_Entities_(XXE)[OWASP Top 10 A4:2017-XML External Entities (XXE)].
@@ -219,7 +219,7 @@ and denial of service attacks.
 page without proper validation or escaping,
 or updates an existing web page with user-supplied data using a browser *API*
 that can create *HTML* or **JavaScript**.
-*XSS* allows attackers to execute scripts in the victim’s browser which can
+*XSS* allows attackers to execute scripts in the victim's browser which can
 hijack user sessions, deface web sites, or redirect the user to malicious
 sites.
 
