skims\feat(back): #2975.201 java weak hash
Former-commit-id: 0449c055cb164abec4d8262b5e27b67613ffdd09

--- a/skims/static/translations/findings/F052.yaml
+++ b/skims/static/translations/findings/F052.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f052.java_insecure_hash.description:
+  en: Use of insecure hashing algorithm in {path}
+  es: Uso de algoritmo resumen inseguro en {path}
 utils.model.finding.enum.F052.description:
   en: >
     The application uses insecure encryption algorithms.
